...
                                            <constraint firstAttribute="width" constant="24" id="jjK-Gu-xBd"/>
                                        </constraints>
                                        <state key="normal" image="smackBurger">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <rect key="frame" x="116" y="593" width="46" height="33"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z1A-44-74r">
                                <rect key="frame" x="331" y="28" width="28" height="28"/>
                                <state key="normal" image="closeButton"/>
                                <connections>
                                    <action selector="closeButtonPressed:" destination="tWR-cH-u2A" eventType="touchUpInside" id="CY5-JL-ALn"/>
...
                                <rect key="frame" x="88" y="339" width="199" height="26"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                <state key="normal" title="Don't have an account? Sign up here">
                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                <state key="normal" title="Choose avatar">
                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yta-Fd-l8Q">
                                <rect key="frame" x="16" y="28" width="28" height="28"/>
                                <state key="normal" image="smackBack"/>
                                <connections>
                                    <action selector="backButtonPressed:" destination="yn6-C6-Bo3" eventType="touchUpInside" id="LEj-YW-dvP"/>
...
